--- a/cake.less
+++ b/cake.less
@@ -11,10 +11,20 @@
 /* ============================================== POSITION
 */
 
+
+.anna {
+  position: fixed;
+  margin: auto;
+ height: auto;
+  width: 400px;
+  object-fit: contain;
+}
+
 .cake{
+  background-image: url('anna.jpeg');
   position:absolute;
   display:none;
- // top:30%; 
+ // top:30%;
   left:50%;
   margin-left:-(@D/2);
   width:@D; height:@D;
@@ -33,7 +43,7 @@
 }
 
 .cake:before{
-  
+
 }
 
 /* ============================================== Candle
