--- a/cake.less
+++ b/cake.less
@@ -240,6 +240,18 @@
 /* ============================================== BIZCOCHO
 */
 
+.anna{
+  background-image:url("anna.jpeg");
+  position:absolute;
+  z-index: 1000000;
+  background-size: cover;
+  background-position: center;
+  bottom:10px;
+  left:60%;
+  margin-left:-(@D/2)/2;
+  width:@D/4; height:@D/4;
+}
+
 .bizcocho{
   background:rgba(109,56,38,1);
   position:absolute;
